<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/white">

        <LinearLayout
            android:id="@+id/ll_dynamic_dynamic"
            style="@style/DynamicButton">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="2dp"
                android:src="@mipmap/dynamic_dynamic"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_dynamic"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_nearby_dynamic"
            style="@style/DynamicButton">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/dynamic_nearby"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_nearby"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_live_dynamic"
            style="@style/DynamicButton">

            <ImageView
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@mipmap/dynamic_live"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dynamic_live"/>

        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_video_dynamic"
        style="@style/Dynamic"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_video_dynamic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/dynamic_video"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_video_dynamic"
            android:text="@string/dynamic_video"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/dynamic_more"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_news_dynamic"
        style="@style/Dynamic"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/iv_news_dynamic"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:src="@mipmap/news"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/iv_news_dynamic"
            android:text="@string/dynamic_news"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/dynamic_more"/>

    </RelativeLayout>

</LinearLayout>