<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/iv_back_publish"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/toolbar_back"/>

            <TextView
                android:id="@+id/tv_back_publish"
                style="@style/CustomTitleTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/iv_back_publish"
                android:text="@string/back_text"/>

            <TextView
                style="@style/CustomTitleTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/write_dynamic"/>

            <TextView
                android:id="@+id/tv_publish_publish"
                style="@style/CustomTitleTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:text="@string/dynamic_publish"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/ll_publish"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_content_publish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@null"
            android:gravity="top"
            android:maxLength="120"
            android:minLines="3"/>

        <ImageView
            android:id="@+id/iv_add_publish"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/et_content_publish"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/publish_add_img"/>

        <FrameLayout
            android:id="@+id/fl_publishing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.8">

            <ImageView
                android:id="@+id/iv_publishing"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/publist"/>
        </FrameLayout>
    </RelativeLayout>

</LinearLayout>