<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/fl_info">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@mipmap/info_bg"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/info_src"/>
                </FrameLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@android:color/white"/>

                <TextView
                    android:id="@+id/tv_username_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"/>
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_info"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:src="@mipmap/icon"/>
        </FrameLayout>

        <include layout="@layout/layout_line"/>

        <TextView
            android:id="@+id/tv_signature"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="18sp"
            android:gravity="center_vertical"/>

        <include layout="@layout/layout_line"/>

        <RelativeLayout
            style="@style/ItemInfo"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_name_info"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/username_info"/>

            <TextView
                android:id="@+id/tv_qq_info"
                style="@style/TextInfo"
                android:layout_toRightOf="@id/iv_name_info"/>

        </RelativeLayout>

        <include layout="@layout/layout_line"/>

        <RelativeLayout
            style="@style/ItemInfo"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_name_phone_num"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerVertical="true"
                android:src="@mipmap/phone_info"/>

            <TextView
                android:id="@+id/tv_phone_info"
                style="@style/TextInfo"
                android:layout_toRightOf="@id/iv_name_phone_num"/>

        </RelativeLayout>

        <include layout="@layout/layout_line"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/tv_exit_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_sure"
                android:gravity="center"
                android:text="@string/exit_username"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>

        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:addStatesFromChildren="true"
        android:fitsSystemWindows="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/iv_back_info"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="back"
            android:layout_centerVertical="true"
            android:src="@mipmap/toolbar_back"/>

        <TextView
            android:id="@+id/tv_title_info"
            style="@style/CustomTitleTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/my_info"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/tv_edit_info"
            style="@style/CustomTitleTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/info_edit"/>
    </RelativeLayout>
</FrameLayout>